re-enable tests re-organize some tests o.h.test.hql.ParameterTest -> LegacyParameterTests bug with binding ordinal parameter lists created "standard domain model" for Hibernate's legacy Animal model